welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:2: error: not found: type int
  var cpt:int=0
          ^occurrences:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to n-1){
        ^